@startuml

title Class Diagram for Inventory Manager

class DB {
    - void saveToDB(item);
}

class Validation {
    - str readInput(x)
}

class HandleInputs {
    - void HandleInputs(inputs)
}

class Display {
    - void display()    
}

class Delete {
    - void deleteData()
}

class Search {
    - void search()
}

class Menu{
    - void handleMenu()
}

class GUI { 
    - void init()
    - void search()
}

class Fetch{
    - void fetchAllInfo()
}

class ReadFromCSV
{
    - void readFromCSV()

}

class ExportToCSV
{
    - void exportToCSV()
}

Menu --* GUI
Menu --* Display
Menu --* Search
Menu --* Delete
Menu --* HandleInputs
HandleInputs --* Validation
HandleInputs --* DB
Search --* Fetch
Fetch --* Display
Search --* DB
Delete --* DB
Display --* DB
Menu --* ReadFromCSV
Menu --* ExportToCSV
HandleInputs   --* ExportToCSV

@enduml
